# dlnlp-assignments

./: .gitignore  README.md
assignment-2/report/: report.tex  title_page.tex
assignment-2/report/chapters/: 0-intro.tex  1-theoretical-background.tex  2-experimental-results.tex  3-conclusions.tex
assignment-2/report/utils/: commands.tex  json.tex  ref.bib  settings.tex
assignment-2/src/: classifiers.py  jupytext.py
assignment-2/src/notebooks/digit_recognition/: digit_recognition.py
assignment-2/src/utils/: serialization.py  time_utils.py  visualization.py
assignment-3/: pyproject.toml
assignment-3/notebooks/: main.py
assignment-3/report/: assignment-3-report.md
