[tool.poetry]
name = "assignment-3"
version = "0.1.0"
description = ""
authors = ["zACIID <marchioropierluigi@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
jupytext = "^1.15.1"
seaborn = "^0.12.2"
loguru = "^0.7.1"
plotly = "^5.16.1"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
